--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   path_provider: ^2.1.4
   path: ^1.9.0
   dotted_border: ^2.1.0
+  animated_text_kit: ^4.2.2
+  pie_chart: ^5.4.0
+  flutter_spinkit: ^5.2.1
+  shimmer: ^3.0.0
   
   
 
